--- a/dotnet-script.csproj
+++ b/dotnet-script.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="ScriptRunnerSample.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
 </Project>
