--- a/dotnet-script.csproj
+++ b/dotnet-script.csproj
@@ -12,10 +12,15 @@
     <PackageReference Include="CS-Script" Version="4.6.5" />
     <PackageReference Include="Dapper" Version="2.0.138" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+    <PackageReference Include="SqlKata" Version="2.4.0" />
+    <PackageReference Include="SqlKata.Execution" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="ScriptRunnerSample.cs">
+    <Compile Update="Sample\ScriptRunnerSample.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Update="Sample\WeatherForecastListRunner.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
   </ItemGroup>
