--- a/dotnet-script.csproj
+++ b/dotnet-script.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="CS-Script" Version="4.6.5" />
     <PackageReference Include="Dapper" Version="2.0.138" />
+    <PackageReference Include="Jint" Version="3.0.0-beta-2049" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="SqlKata" Version="2.4.0" />
     <PackageReference Include="SqlKata.Execution" Version="2.4.0" />
@@ -23,6 +24,12 @@
     <Compile Update="Sample\WeatherForecastListRunner.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="sql.ejs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
